<resources>
    <string name="app_name">Go Mommy</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="let_s_create_you_an_account_first">Let\'s create you an account first</string>
    <string name="create_account">Create Account</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="go_mommy_logo_in_white">Go Mommy Logo in white</string>
    <string name="google_logo">Google Logo</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="welcome">Welcome!</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="yes_i_am_a_first_time_mom">Yes, I am a first time mom</string>
    <string name="no_i_have_had_children_before">No, I have had children before</string>
    <string name="user_agreement">User Agreement</string>
    <string name="i_agree_to_privacy_policy_and_terms_of_use">I agree to Privacy Policy and Terms of Use.</string>
    <string name="i_agree_to_processing_of_my_personal_health_data_for_providing_me_go_mommy_functions_see_more_in_privacy_policy">I agree to processing of my personal health data for providing me Go Mommy functions. See more in Privacy Policy.</string>
    <string name="next">Next</string>
    <string name="welcome_image">Welcome Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_birthyear_picker">BirthyearPicker</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="next_birth_year">Next</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account_and_dive_in">Create an account and dive in</string>
    <string name="create_with_google">Create with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or">or</string>
</resources>