<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <EditText
        android:id="@+id/signupUsernameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/username"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signupPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922"
        android:autofillHints="username"
        android:inputType="text" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        app:layout_constraintVertical_bias="0.022"
        android:focusable="true" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/disable_button"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/disabled_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPasswordEditText"
        app:layout_constraintVertical_bias="0.093" />

    <ToggleButton
        android:id="@+id/showPasswordToggleButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/show_password_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@+id/signupPasswordEditText"
        app:layout_constraintEnd_toEndOf="@+id/signupPasswordEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signupPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/signupPasswordEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/signupPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="392dp"
        android:autofillHints="password"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="10dp"
        android:text="@string/let_s_create_you_an_account_first"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/signupUsernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/btn_gradientbg"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        app:layout_constraintVertical_bias="0.878" />

    <Button
        android:id="@+id/googleSignIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_gradientbg"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in_with_google"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
        app:layout_constraintVertical_bias="0.257" />

    <ImageView
        android:id="@+id/goMommyLogoWhite"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/go_mommy_logo_in_white"
        app:layout_constraintBottom_toBottomOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="@+id/createAccountButton"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/createAccountButton"
        app:layout_constraintTop_toTopOf="@+id/createAccountButton"
        app:srcCompat="@drawable/go_mommywhite" />

    <ImageView
        android:id="@+id/googleLogo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/google_logo"
        app:layout_constraintBottom_toBottomOf="@+id/googleSignIn"
        app:layout_constraintEnd_toEndOf="@+id/googleSignIn"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/googleSignIn"
        app:layout_constraintTop_toTopOf="@+id/googleSignIn"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/google_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>